# TagSupporter

./: .gitignore  AmarokDatabaseWidget.cpp  AmarokDatabaseWidget.h  AmarokDatabaseWidget.ui  CMakeLists.txt  CoverDownloader.cpp  CoverDownloader.h  DiscogsInfoSources.cpp  DiscogsInfoSources.h  DiscogsParser.cpp  DiscogsParser.h  EmbeddedSQLConnection.cpp  EmbeddedSQLConnection.h  FilenameWidget.cpp  FilenameWidget.h  MetadataWidget.cpp  MetadataWidget.h  MetadataWidget.ui  OnlineInfoSources.cpp  OnlineInfoSources.h  OnlineSourceParser.cpp  OnlineSourceParser.h  OnlineSourcesWidget.cpp  OnlineSourcesWidget.h  OnlineSourcesWidget.ui  PlaybackWidget.cpp  PlaybackWidget.h  PlaybackWidget.ui  README.md  StringDistance.cpp  StringDistance.h  TagSupporter.cpp  TagSupporter.h  TagSupporter.pro  TagSupporter.ui  WebBrowserWidget.cpp  WebBrowserWidget.h  WebBrowserWidget.ui  WikipediaInfoSources.cpp  WikipediaInfoSources.h  (+3 more)
OnlineParsers/: CMakeLists.txt  DiscogsInfoSources.cpp  DiscogsInfoSources.h  DiscogsParser.cpp  OnlineInfoSources.cpp  WikipediaInfoSources.cpp  WikipediaParser.cpp  WikipediaParser.h
Tools/: CMakeLists.txt  EmbeddedSQLConnection.cpp  StringDistance.h  TemporaryRecursiveCopy.cpp  TemporaryRecursiveCopy.h
Widgets/: AmarokDatabaseWidget.cpp  AmarokDatabaseWidget.h  CMakeLists.txt  FileBrowserWidget.cpp  FileBrowserWidget.h  FileBrowserWidget.ui  FilenameWidget.h  FilenameWidget.ui  MetadataWidget.cpp  OnlineSourcesWidget.cpp  OnlineSourcesWidget.h  OnlineSourcesWidget.ui  PlaybackWidget.ui  WebBrowserWidget.cpp  WebBrowserWidget.h  WebBrowserWidget.ui
cmake/modules/: FindMariaDB.cmake  FindMySQL.cmake  FindTaglib.cmake
